--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
-{{#if newUrl}}
+{{#if urlData}}
 <h4>Success! Please use this link:</h4>
-<a href="">
-  <h5>{{ newUrl }}</h5>
+<a href="{{{ urlData.originalUrl }}}">
+  <h5>{{urlBasic}}{{ urlData.shortenUrl }}</h5>
 </a>
 <div class="button-area mt-3">
-  <a href="/" class="btn btn-success mx-2">Retry</a>
+  <a href="./" class="btn btn-success mx-2">Retry</a>
   <button class="btn btn-primary mx-2">Copy</button>
 </div>
 {{else}}
