--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,7 @@
 
 <form action="./" method="POST">
   <div class="mb-3">
+    {{!-- Use input type and required attribute to avoid wrong submit. --}}
     <input type="url" class="form-control" name="url" placeholder="Input URL here" required>
 
   </div>
